--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ckeditor/ckeditor5-angular": "^1.2.3",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
